<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentAbout"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/aboutMe" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/NavMaps" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/NavHome" />

    <item
        android:id="@+id/favorisFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/NavFavoris" />

    <item
        android:id="@+id/loginActivity"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/logout" />

</menu>